# Mech-Eye-SDK

./: README.md  Readme.txt  Ubuntu1604_install.sh  Ubuntu1804_install.sh  run_sample.sh
mecheye_cpp_interface-1.0.0/: CMakeLists.txt
mecheye_cpp_interface-1.0.0/include/: CameraCmd.h  sample.h
mecheye_cpp_interface-1.0.0/src/: .CameraClient.cpp.swp  CameraClient.cpp  main.cpp  sample1_parameter.cpp  sample2_ImgAndCloud.cpp
